--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -128,4 +128,7 @@
         </item>
     </string-array>
 
+    <string name="its_name_is_the_only_way_it_is_known">Its name is the only way it is known</string>
+    <string name="unknown">Unknown</string>
+
 </resources>
